--- a/assets/style.css
+++ b/assets/style.css
@@ -1,58 +1,162 @@
-  /* unvisited link */
-  a:link {
-    color: #dc3d87;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: #dc3d87;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: #dc3d87;
-  }
-  
-  /* selected link */
-  a:active {
-    color: #dc3d87;
-  }
-  
-  /* Graph Control Objects ––––––––––––––––––––––––––––––––––––––––––––––––––*/
-  
-  .Select-control, .Select-menu-outer, .Select-multi-value-wrapper, .select-up, .is-open .Select-control {
-    background-color: #e9e9e8;
-    color: #000000;
-  }
-  
-  /* width */
-  ::-webkit-scrollbar {
-    width: 10px !important;
-    display: block !important;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #272b30 !important;  
-    border-radius: 10px !important;
-    display: block !important;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #272b30 !important; 
-    border-radius: 3px; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #272b30 !important; 
-  }
-  
-  /* width */
-  ::-webkit-scrollbar {
-    width: 10px !important;
-    display: block !important;
-  }
-  
-  
+/* Loading */
+
+._dash-loading {
+  margin: auto;
+  color: transparent;
+  width: 0;
+  height: 0;
+  text-align: center;
+}
+
+._dash-loading::after {
+  content: '';
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  color: #dc3d87;
+  vertical-align: text-bottom;
+  border: 0.25em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border 0.75s linear infinite;
+  animation: spinner-border 0.75s linear infinite;
+  margin-top: 12rem;
+}
+
+/* Body */
+
+body { 
+  margin: 0;
+  width: 100%; 
+}
+
+code {
+  font-weight: bold !important;
+}
+
+a:link {
+  color: #dc3d87;
+}
+
+a:visited {
+  color: #dc3d87;
+}
+
+a:hover {
+  color: #dc3d87;
+}
+
+a:active {
+  color: #dc3d87;
+}
+
+/* Pages */
+
+.title-style {
+  display: inline-block;
+  vertical-align: middle;
+  font-weight: bold;
+}
+
+.title-icon-style {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 1rem
+}
+
+.title-div {
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.modal-body-text-style {
+    text-align: justify;
+    text-justify: inter-word;
+    font-weight: bold;
+}
+
+.page-intro {
+  text-align: center; 
+  font-weight: bold
+}
+
+.page-intro-inner-div {
+  max-width: 800px;
+}
+
+.page-intro-outer-div {
+  width: 100%; 
+  display: flex; 
+  justify-content: center;
+}
+
+.badges {
+  text-align: center;
+}
+
+.badges-div {
+  width: 100%; 
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+
+.icon-button {
+  border: none;
+  font-weight: bold;
+  margin-left: 5px;
+  margin-top: 20px;
+  width: 100%;
+  text-align: left;
+  text-decoration: none;
+}
+
+.icon-button:hover {
+  color: #f4f5f5;
+  cursor: pointer;
+}
+
+
+
+/* Graph Control Objects ––––––––––––––––––––––––––––––––––––––––––––––––––*/
+
+.Select-control, .Select-menu-outer, .Select-multi-value-wrapper, .select-up, .is-open .Select-control {
+  background-color: #e9e9e8;
+  color: #000000;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px !important;
+  display: block !important;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #272b30 !important;  
+  border-radius: 10px !important;
+  display: block !important;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3a3f44 !important; 
+  border-radius: 3px; 
+  opacity: 0.5;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3a3f44!important; 
+  opacity: 0.5;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px !important;
+  display: block !important;
+}
+
